RESOLVED FIXED88572
WebCore should use a single definition of an invalid media time.
https://bugs.webkit.org/show_bug.cgi?id=88572
Summary WebCore should use a single definition of an invalid media time.
Jer Noble
Reported 2012-06-07 13:29:04 PDT
WebCore should use a single definition of an invalid media time.
Attachments
Patch (2.69 KB, patch)
2012-06-07 13:42 PDT, Jer Noble
no flags
Patch (18.03 KB, patch)
2012-06-07 13:43 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2012-06-07 13:42:40 PDT
Jer Noble
Comment 2 2012-06-07 13:43:47 PDT
Eric Carlson
Comment 3 2012-06-07 19:59:15 PDT
Comment on attachment 146376 [details] Patch Nice!
Jer Noble
Comment 4 2012-06-10 11:10:10 PDT
Note You need to log in before you can comment on or make changes to this bug.